--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,6 @@ tree/binary_tree/a.out
 tree/binary_tree/binary_tree.hpp.gch
 tree/binary_tree/binary_tree_interface.h.gch
 tree/binary_tree/binary_tree_node.hpp.gch
+tree/binary_search_tree/binary_search_tree.hpp.gch
+tree/binary_search_tree/binary_search_node.hpp.gch
+tree/binary_search_tree/binary_search_interface.h.gch
